--- a/src/_data/meetings.yml
+++ b/src/_data/meetings.yml
@@ -114,3 +114,10 @@
   location_url: /monthly%20meetings/Getting-to-and-Parking-at-Canyon-Glen.html
   type: Monthly Meeting
   time: 8PM
+- month: May 6th, 2020
+  topic: The Wranglers Go Online
+  topic_url: /events/Yeast-Wranglers-In-The-Age-of-Covid.html
+  location: WebEx
+  location_url: /events/Yeast-Wranglers-In-The-Age-of-Covid.html
+  type: Monthly Meeting
+  time: 8PM 
